@@ -1,3 +1,9 @@
+2006-06-15  Julian Brown  <julian@codesourcery.com>
+
+	* config/tc-arm.c (do_vfp_nsyn_ldr_str): Remove, fold into...
+	(do_neon_ldr_str): Always defer to VFP encoding routines, which handle
+	relocs properly.
+
 2006-06-12  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config/tc-i386.c (process_suffix): Don't add rex64 for
